--- a/src/Book/Book.css
+++ b/src/Book/Book.css
@@ -23,11 +23,9 @@ body {
   }
 
 
-
-
   .front {
       text-align: center;
-      font-style: italic;
+      font-family: arcon;
       font-size: 24px;
   }
   
