--- a/src/MainPage/MainPage.css
+++ b/src/MainPage/MainPage.css
@@ -7,6 +7,12 @@ body {
     font-style: normal;
   }
   
+
+  .small-red{
+    width: 77px;
+    height: 111px;
+  }
+
   .animation-box {
     margin: 0 auto;
   }
@@ -27,8 +33,30 @@ body {
 
   .nav-element {
     margin-left: 100px; 
-   
     display: inline-block ;
+  }
+
+
+  .ans {
+    position: absolute;
+    bottom: 4%;
+    right: 0px;
+    color: white;
+    margin: 0 auto
+  }
+
+  .ans-element {
+    display: inline-block ;
+    width: 77px;
+    height: 111px;
+    border: dashed  1px white;
+    margin-right: 40px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 0px;
+    padding-right: 5px;
+
+    margin-bottom: 20px;
   }
 
   @keyframes rightFadeInOut {
@@ -265,14 +293,18 @@ body {
 .card-big {
   width: 154px;
   height: 222px;
+  cursor: pointer;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .red-card {
   width: 77px;
   height: 111px;
-  border-radius: .5em;
-  background-color: rgba(179, 0, 0, 0.7);
-  border: 1px solid rgb(51, 0, 26);
+  
+  background-color: #ea0000;
+  border: 3px solid white;
   cursor: pointer;
 }
 
@@ -295,4 +327,18 @@ body {
 .red-cards-container {
   width: 500px;
   margin-Top: 100px;
+}
+
+.last {
+    font-size: 2.4rem;
+    max-width: 100vw;
+    height: 100%;
+    opacity: 0;
+    color: white;
+    animation-name: fadein;
+    animation-delay: 0s;
+    animation-duration: 6s;
+    animation-fill-mode: forwards;
+    line-height: 1.5;
+    
 }
